--- a/src/index.html
+++ b/src/index.html
@@ -1,62 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html,
-    body {
-      height: 100%;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-  <script defer type="module">
-
-    import { connect } from "https://unpkg.com/@permaweb/aoconnect";
-
-    const { dryrun } = connect();
-
-    async function getWebsite(processId) {
-      try {
-        const result = await dryrun({
-          process: processId,
-          tags: [
-            { name: 'Action', value: "Get-Frame" }
-          ]
-        });
-        console.log(result)
-        return result.Messages[0]
-      } catch (e) {
-        console.log(e)
-        return "XFvaK9uJOBzU55sx3MG5aBeDNs8x1PIeOkN8PQY4atc"
-      }
-    }
-
-
-    (async () => {
-      let arns = false
-      // get process id
-      let processId = await fetch(window.location.href).then(res => res.headers.get('x-arns-resolved-id'))
-      if (!processId) {
-        processId = window.location.href.split('/')[3]
-      } else {
-        arns = true
-      }
-      const processResponse = await getWebsite(processId);
-      //const website = await fetch(`https://arweave.net/${processResponse.Data}`)
-      //const websiteData = await website.text();
-      const gateway = window.location.origin.split('.')[1] + "." + window.location.origin.split('.')[2]
-
-      const url = `https://${gateway}/${processResponse.Data}`
-
-      document.getElementById('body').innerHTML = `<iframe style = "border:0;width:100%;height:100%" src = "${url}" />`;
-    })();
-  </script>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
-<body id="body"></body>
+<body>
+
+  <div id="iframe"></div>
+
+  <div id="footer">
+    <div class="footer-col" id="col-votes">
+      <h2 class="footer-heading">What are people voting for?</h2>
+    </div>
+    <div class="footer-col">
+      <h2 class="footer-heading">Cast your vote!</h2>
+      <ol>
+        <li>
+          Earn some $CRED by completing the <a href="https://cookbook_ao.g8way.io/tutorials/begin/index.html" target="_blank" rel="no-opener no-referrer"> on ao</a>.
+        </li>
+        <li>
+          Swap that CRED for MEME, the token you can use to vote on what appears in the iframe above.
+        </li>
+        <li>
+          Stake your MEME with the community process.
+        </li>
+        <li>
+          Vote on the URL of your dreams.
+        </li>
+      </ol>
+      <p id="cred-balance"></p>
+    </div>
+  </div>
+
+  <script defer type="module" src="index.js"></script>
+</body>
 
 </html>
